refactor(log): Enhance log manager initialization and health check process